<resources>
    <string name="app_name">Github User</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="back">Back</string>

    <string-array name="tabs">
        <item>Followers</item>
        <item>Following</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error :(</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="are_you_sure_exit">Are You Sure Exit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="source_code">Source Code</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="email_riskiilyas03_gmail_com">email: riskiilyas03@gmail.com</string>
    <string name="location">Location</string>
    <string name="repositories">Repositories</string>
    <string name="followers">Followers</string>
    <string name="company">Company</string>
    <string name="following">Following</string>
</resources>